--- a/contato.html
+++ b/contato.html
@@ -32,7 +32,8 @@
                 <form>
                     <label>Nome: </label><input type="text"> <br>
                     <label>E-mail: </label><input type="email"><br>
-                    <label>Telefone:   </label><input type="number"><br>
+                    <label for="telefone">Telefone:   </label><input type="tel" 
+                    id="telefone" class="input-padrao" required placeholder="(xx) xxxxx-xxxx"><br>
                     <label>Assunto:   </label><input type="text"><br>
                     <label>Mensagem:</label>
                     <textarea rows="10" cols="50" name="msg"></textarea>
